# redbridge

./: .gitignore  README.md  justfile  start-daemon.vbs
daemon/: column_mode.py  deck.py  gfx.py  hook.py  log.py  main.py  preview_card.py  pyproject.toml  registry.py  runtime.py  sessions.py  win_focus.py
daemon/behaviors/: __init__.py  axl_inspector.py  base.py  claude_code_idle.py  claude_session_monitor.py  claude_sessions.py  claude_thinking.py  discord.py  discord_auth.py  empty.py  launch_app.py  redcompute_jobs.py  redmatter_cms.py  run_command.py  spotify.py  static_label.py  volume_control.py  wallpaper_tile.py  workspace_launcher.py
webui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
webui/src/: App.tsx  api.ts
webui/src/components/: ConfigPanel.tsx  DeckMock.tsx  SchemaForm.tsx  SettingsPanel.tsx
webui/src/hooks/: useWS.ts
